--- a/SmogApp/Base.lproj/Main.storyboard
+++ b/SmogApp/Base.lproj/Main.storyboard
@@ -184,7 +184,41 @@
                     <view key="view" contentMode="scaleToFill" id="fXK-VO-UxA">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w5d-aq-5Vq" customClass="GMSMapView">
+                                <rect key="frame" x="0.0" y="44" width="600" height="472"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GzF-aE-T9w">
+                                <rect key="frame" x="0.0" y="516" width="600" height="40"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="nx5-Wa-qX4"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="GzF-aE-T9w" firstAttribute="leading" secondItem="fXK-VO-UxA" secondAttribute="leadingMargin" constant="-20" id="068-TC-EHu"/>
+                            <constraint firstItem="GzF-aE-T9w" firstAttribute="bottom" secondItem="80K-eD-GpC" secondAttribute="top" id="3UZ-xv-qPn"/>
+                            <constraint firstItem="w5d-aq-5Vq" firstAttribute="top" secondItem="68X-h4-cr9" secondAttribute="bottom" id="6d0-Ht-Bve"/>
+                            <constraint firstItem="w5d-aq-5Vq" firstAttribute="bottom" secondItem="80K-eD-GpC" secondAttribute="top" id="7mW-0I-OpS"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="GzF-aE-T9w" secondAttribute="trailing" constant="-20" id="V0x-7r-DUv"/>
+                            <constraint firstAttribute="trailing" secondItem="w5d-aq-5Vq" secondAttribute="trailing" id="YkC-h2-gQg"/>
+                            <constraint firstItem="w5d-aq-5Vq" firstAttribute="leading" secondItem="fXK-VO-UxA" secondAttribute="leading" id="cbP-5Q-dgf"/>
+                            <constraint firstItem="GzF-aE-T9w" firstAttribute="top" secondItem="w5d-aq-5Vq" secondAttribute="bottom" constant="-275" id="e0N-3a-Bld"/>
+                            <constraint firstItem="GzF-aE-T9w" firstAttribute="top" secondItem="w5d-aq-5Vq" secondAttribute="bottom" id="hYL-F5-Yc7"/>
+                            <constraint firstItem="GzF-aE-T9w" firstAttribute="leading" secondItem="w5d-aq-5Vq" secondAttribute="leading" id="lxn-c2-v9o"/>
+                            <constraint firstItem="GzF-aE-T9w" firstAttribute="trailing" secondItem="w5d-aq-5Vq" secondAttribute="trailing" id="mc5-Qw-053"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="7mW-0I-OpS"/>
+                                <exclude reference="e0N-3a-Bld"/>
+                                <exclude reference="lxn-c2-v9o"/>
+                                <exclude reference="mc5-Qw-053"/>
+                            </mask>
+                        </variation>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Map" id="fCb-7y-8YG">
@@ -199,7 +233,9 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="legendView" destination="GzF-aE-T9w" id="8Vt-H8-CW4"/>
                         <outlet property="menuButton" destination="gbj-P8-byR" id="mUe-P2-swY"/>
+                        <outlet property="storyBoardMapView" destination="w5d-aq-5Vq" id="BjA-Zs-357"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bmN-8M-KP6" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -224,7 +260,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="M86-jc-TE0"/>
                                 </constraints>
-                                <mutableString key="text">Normy jakości powietrza
+                                <string key="text">Normy jakości powietrza
 Normy dla prognozowanych zanieczyszczeń powietrza
 wg Rozporządzenia Ministra Środowiska z dnia 24 sierpnia 2012 r. w sprawie poziomów niektórych substancji w powietrzu
 
@@ -299,7 +335,7 @@ Poziom dopuszczalny stężenia średniego 1-godzinnego: 350 μg/m3
 (przekroczenie tego poziomu dozwolone 24 razy w ciągu roku)
 
 Poziom alarmowy stężenia średniego 1-godzinnego: 500 μg/m3
-</mutableString>
+</string>
                                 <color key="textColor" red="0.41721584841738857" green="0.57891013311443595" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
