--- a/SmogApp/Base.lproj/Main.storyboard
+++ b/SmogApp/Base.lproj/Main.storyboard
@@ -191,9 +191,102 @@
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GzF-aE-T9w">
                                 <rect key="frame" x="0.0" y="516" width="600" height="40"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sSf-8C-iDX">
+                                        <rect key="frame" x="160" y="9" width="72" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="3vI-s8-5Wv"/>
+                                            <constraint firstAttribute="height" constant="21" id="CMZ-lY-Tob"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="CMZ-lY-Tob"/>
+                                            </mask>
+                                        </variation>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Ze-Af-9eF">
+                                        <rect key="frame" x="236" y="10" width="72" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="b2v-Uh-IHJ"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jnj-V9-iL9">
+                                        <rect key="frame" x="388" y="10" width="72" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="ol9-Gq-LVb"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8C6-Ba-mAw">
+                                        <rect key="frame" x="464" y="10" width="60" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="RMc-Lj-g2b"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K7l-vN-WVQ">
+                                        <rect key="frame" x="312" y="10" width="72" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="pbZ-cf-Pg2"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="03B-av-ffl">
+                                        <rect key="frame" x="8" y="8" width="72" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="24" id="KIa-BG-N80"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m7x-HE-7jB">
+                                        <rect key="frame" x="84" y="10" width="72" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="3Rj-aW-F90"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstItem="K7l-vN-WVQ" firstAttribute="leading" secondItem="9Ze-Af-9eF" secondAttribute="trailing" constant="4" id="2NS-pV-I3M"/>
+                                    <constraint firstItem="m7x-HE-7jB" firstAttribute="centerY" secondItem="GzF-aE-T9w" secondAttribute="centerY" id="7Sn-we-I1w"/>
+                                    <constraint firstItem="sSf-8C-iDX" firstAttribute="leading" secondItem="m7x-HE-7jB" secondAttribute="trailing" constant="4" id="7UU-Le-Jlk"/>
+                                    <constraint firstItem="Jnj-V9-iL9" firstAttribute="centerY" secondItem="GzF-aE-T9w" secondAttribute="centerY" id="7kX-Cr-XJo"/>
+                                    <constraint firstItem="8C6-Ba-mAw" firstAttribute="leading" secondItem="Jnj-V9-iL9" secondAttribute="trailing" constant="4" id="D2S-TT-jaK"/>
+                                    <constraint firstItem="sSf-8C-iDX" firstAttribute="width" secondItem="GzF-aE-T9w" secondAttribute="width" multiplier="0.12" id="DpX-C2-Fv1"/>
+                                    <constraint firstItem="03B-av-ffl" firstAttribute="width" secondItem="GzF-aE-T9w" secondAttribute="width" multiplier="0.12" id="GNh-d0-zDC"/>
+                                    <constraint firstItem="9Ze-Af-9eF" firstAttribute="leading" secondItem="sSf-8C-iDX" secondAttribute="trailing" constant="4" id="Mqs-IH-BbN"/>
+                                    <constraint firstItem="03B-av-ffl" firstAttribute="leading" secondItem="GzF-aE-T9w" secondAttribute="leading" constant="8" id="R8e-Fn-p5U"/>
+                                    <constraint firstItem="8C6-Ba-mAw" firstAttribute="width" secondItem="GzF-aE-T9w" secondAttribute="width" multiplier="0.1" id="aEa-Cp-0Dy"/>
+                                    <constraint firstItem="9Ze-Af-9eF" firstAttribute="centerY" secondItem="GzF-aE-T9w" secondAttribute="centerY" id="baA-Di-PMJ"/>
+                                    <constraint firstItem="K7l-vN-WVQ" firstAttribute="width" secondItem="GzF-aE-T9w" secondAttribute="width" multiplier="0.12" id="ceL-X8-4ek"/>
+                                    <constraint firstItem="Jnj-V9-iL9" firstAttribute="leading" secondItem="K7l-vN-WVQ" secondAttribute="trailing" constant="4" id="dFj-wF-Jn7"/>
+                                    <constraint firstItem="m7x-HE-7jB" firstAttribute="leading" secondItem="03B-av-ffl" secondAttribute="trailing" constant="4" id="dyW-1K-bNw"/>
+                                    <constraint firstItem="8C6-Ba-mAw" firstAttribute="centerY" secondItem="GzF-aE-T9w" secondAttribute="centerY" id="foW-x5-MK5"/>
+                                    <constraint firstItem="Jnj-V9-iL9" firstAttribute="width" secondItem="GzF-aE-T9w" secondAttribute="width" multiplier="0.12" id="gib-cw-AM0"/>
+                                    <constraint firstItem="sSf-8C-iDX" firstAttribute="centerY" secondItem="GzF-aE-T9w" secondAttribute="centerY" id="iIh-u6-2sd"/>
+                                    <constraint firstItem="m7x-HE-7jB" firstAttribute="width" secondItem="GzF-aE-T9w" secondAttribute="width" multiplier="0.12" id="jlD-GE-RrJ"/>
+                                    <constraint firstItem="03B-av-ffl" firstAttribute="centerY" secondItem="GzF-aE-T9w" secondAttribute="centerY" id="k0n-tc-iD4"/>
+                                    <constraint firstItem="9Ze-Af-9eF" firstAttribute="width" secondItem="GzF-aE-T9w" secondAttribute="width" multiplier="0.12" id="kY9-U2-QLL"/>
                                     <constraint firstAttribute="height" constant="40" id="nx5-Wa-qX4"/>
+                                    <constraint firstItem="K7l-vN-WVQ" firstAttribute="centerY" secondItem="GzF-aE-T9w" secondAttribute="centerY" id="oux-uZ-ANB"/>
+                                    <constraint firstAttribute="bottom" secondItem="03B-av-ffl" secondAttribute="bottom" constant="8" id="ruK-9c-YZQ"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -202,23 +295,11 @@
                             <constraint firstItem="GzF-aE-T9w" firstAttribute="leading" secondItem="fXK-VO-UxA" secondAttribute="leadingMargin" constant="-20" id="068-TC-EHu"/>
                             <constraint firstItem="GzF-aE-T9w" firstAttribute="bottom" secondItem="80K-eD-GpC" secondAttribute="top" id="3UZ-xv-qPn"/>
                             <constraint firstItem="w5d-aq-5Vq" firstAttribute="top" secondItem="68X-h4-cr9" secondAttribute="bottom" id="6d0-Ht-Bve"/>
-                            <constraint firstItem="w5d-aq-5Vq" firstAttribute="bottom" secondItem="80K-eD-GpC" secondAttribute="top" id="7mW-0I-OpS"/>
                             <constraint firstAttribute="trailingMargin" secondItem="GzF-aE-T9w" secondAttribute="trailing" constant="-20" id="V0x-7r-DUv"/>
                             <constraint firstAttribute="trailing" secondItem="w5d-aq-5Vq" secondAttribute="trailing" id="YkC-h2-gQg"/>
                             <constraint firstItem="w5d-aq-5Vq" firstAttribute="leading" secondItem="fXK-VO-UxA" secondAttribute="leading" id="cbP-5Q-dgf"/>
-                            <constraint firstItem="GzF-aE-T9w" firstAttribute="top" secondItem="w5d-aq-5Vq" secondAttribute="bottom" constant="-275" id="e0N-3a-Bld"/>
                             <constraint firstItem="GzF-aE-T9w" firstAttribute="top" secondItem="w5d-aq-5Vq" secondAttribute="bottom" id="hYL-F5-Yc7"/>
-                            <constraint firstItem="GzF-aE-T9w" firstAttribute="leading" secondItem="w5d-aq-5Vq" secondAttribute="leading" id="lxn-c2-v9o"/>
-                            <constraint firstItem="GzF-aE-T9w" firstAttribute="trailing" secondItem="w5d-aq-5Vq" secondAttribute="trailing" id="mc5-Qw-053"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="7mW-0I-OpS"/>
-                                <exclude reference="e0N-3a-Bld"/>
-                                <exclude reference="lxn-c2-v9o"/>
-                                <exclude reference="mc5-Qw-053"/>
-                            </mask>
-                        </variation>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Map" id="fCb-7y-8YG">
